--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,6 +3,6 @@
 base="dark"
 primaryColor="#E50914"
 backgroundColor="#000000"
-secondaryBackgroundColor="#111111"
+secondaryBackgroundColor="#1a1a1a"
 textColor="#ffffff"
 font="sans serif"
